--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 		padding: 0% 0 0 0;
 	}
 	#slide3d{
-		background-image: url(images/blankpanel3.jpg);
+		background-image: url(images/cloningslide2.jpg);
 		padding: 0% 0 0 0;
 	}
 	#slide3e{
