free page addition

--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
 		background-image: url(images/freeslide3.jpg);
 		padding: 0% 0 0 0;
 	}
+	#slide2f{
+		background-image: url(images/freeslide6.jpg);
+		padding: 0% 0 0 0;
+	}
 	/* Game Cloning
 	* --------------------------------------- */
 	#slide3a{
@@ -267,6 +271,9 @@
 			
 		</div>
 		<div class="slide" id="slide2e">
+			
+		</div>
+		<div class="slide" id="slide2f">
 			
 		</div>
 	</div>
