--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		padding: 0% 0 0 0;
 	}
 	#slide3e{
-		background-image: url(images/blankpanel3.jpg);
+		background-image: url(images/cloningslide5.jpg);
 		padding: 0% 0 0 0;
 	}
 	#slide3f{
@@ -161,7 +161,7 @@
 		padding: 0% 0 0 0;
 	}
 	#slide4e{
-		background-image: url(images/blankpanel4.jpg);
+		background-image: url(images/microslide5.jpg);
 		padding: 0% 0 0 0;
 	}
 	
@@ -284,7 +284,7 @@
 			</div>
 		</div>
 		<div class="slide" id="slide3b">
-			<h1 class="subheader"><span style="color:white"></style></h1>
+			
 			
 		</div>
 		<div class="slide" id="slide3c">
@@ -317,9 +317,7 @@
 			
 		</div>
 		<div class="slide" id="slide4e">
-			<h1 class="subheader"></h1>
-			<p>When used properly, microtransactions can be a way in which both the players and developers can benefit. There are many games out on the mobile market that use microtransactions as a way to take advantage of players and limit their play at a cost.</p>
-			<p>BE AWARE of what costs are associated with a game before you invest time into it.</p>
+			
 		</div>
 	</div>
 	</div>
