--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
 					
 				</ul>
 				<div id="copyright">
-					<p class="panelinfo">Designed by Brandon Berndt</p>
+					<p class="panelinfo">Designed by Brandon Berndt &copy;</p>
 				</div>
 				</div>
             </div>
