--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
             	<div id="column1">
             	<p class="panelinfo">Print files available for stickers and posters.</p>
 
-            		<ul style="text-decoration:none; color:white;">
+            		<ul class="printlinks" style="text-decoration:none; color:white;">
 					<li><a href="https://www.dropbox.com/s/r9nxdmbif1mzihj/shovelawareposter1.jpg?dl=0" target="_blank">Poster 11x17</a></li>
 					<li><a href="https://www.dropbox.com/s/l0fcnhwcmmu53oy/shovelawaresticker1_2x3.jpg?dl=0" target="_blank">Sticker v1</a></li>
 					<li><a href="https://www.dropbox.com/s/j62ov0lzgarh88s/shovelawaresticker2_2x3.jpg?dl=0" target="_blank">Sticker v2</a></li>
