--- a/about.html
+++ b/about.html
@@ -114,9 +114,9 @@
             	<img class="panelimage" src="images/shovelawaresticker2.png" alt="shovelaware poster" style="width:200px; height:400px;">
             	<img class="panelimage" src="images/shovelawaresticker1.png" alt="shovelaware poster" style="width:200px; height:400px;">
             	<img class="panelimage" src="images/shovelawareposter1.jpg" alt="shovelaware poster" style="width:300px; height:400px;">
-            	<img id="busad1"  src="images/shovelawarebusad1.jpg" alt="shovelaware bus ad" style="width:; height:;">
+            	<!--<img id="busad1"  src="images/shovelawarebusad1.jpg" alt="shovelaware bus ad" style="width:; height:;">
             	<img id="busad2"  src="images/shovelawarebusad2.jpg" alt="shovelaware bus poster" style="width:; height:">
-            	</div>
+            	</div>-->
             	<div id="column1">
             	<p class="panelinfo">Print files available for stickers and posters.</p>
             	<div class="printlinks">
